allow-scrape-cnp.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tenant-metrics-l7
  namespace: tenant-one
spec:
  endpointSelector:
    matchLabels:
      app: tenant-metrics
      vcluster.loft.sh/managed-by: tenant-one
      vcluster-tenant: tenant1
      vcluster.loft.sh/namespace: metrics-app
  ingress:
    - fromEndpoints:
        # Only allow access from the scraper pods in platform-observability
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: platform-observability
            app: platform-scraper
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              # Allow only GET /metrics
              - method: "GET"
                path: "^/metrics$"
