np.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: tenant-one:networking.k8s.io/NetworkPolicy:tenant-one/vc-cp-tenant-one
  creationTimestamp: "2026-05-04T07:40:42Z"
  generation: 3
  labels:
    app: vcluster
    chart: vcluster-0.33.1
    heritage: Helm
    release: tenant-one
  name: vc-cp-tenant-one
  namespace: tenant-one
  resourceVersion: "12044"
  uid: 93bf82b5-709e-4b47-946d-94c708dcf39c
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  - ports:
    - port: 443
      protocol: TCP
    - port: 8443
      protocol: TCP
    - port: 6443
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          release: tenant-one
  - to:
    - podSelector:
        matchLabels:
          vcluster.loft.sh/managed-by: tenant-one
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: loft
  ingress:
  - from:
    - podSelector:
        matchLabels:
          release: tenant-one
  - from:
    - podSelector:
        matchLabels:
          vcluster.loft.sh/managed-by: tenant-one
    ports:
    - port: 1053
      protocol: UDP
    - port: 1053
      protocol: TCP
    - port: 8443
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: vcluster-snapshot
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: loft
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: argocd
    ports:
    - port: 443
      protocol: TCP
  podSelector:
    matchLabels:
      release: tenant-one
  policyTypes:
  - Egress
  - Ingress
